[project]
name = "stlite-dev"
version = "0.0.0"
description = "Development environment for stlite"
# The exact Python version is pinned in .python-version (must match Pyodide's
# Python). This constraint must be broad enough to silence uv's warning but
# narrow enough that all dev dependencies (e.g. pyodide-build) resolve.
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  # `pyodide xbuildenv install` which is automatically run by
  # `pyodide py-compile` uses `pip` to install packages.
  "pip",
  "pyodide-build==0.30.7",
]
