[project]
name = "stlite-dev"
version = "0.0.0"
description = "Development environment for stlite"
# The exact Python version is pinned in .python-version (must match Pyodide's
# Python). This constraint must be narrow enough that all dev dependencies
# resolve, and consistent across the uv workspace members.
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  # `pyodide xbuildenv install` which is automatically run by
  # `pyodide py-compile` uses `pip` to install packages.
  "pip",
  "pyodide-build==0.30.7",
]

[tool.uv.workspace]
members = ["packages/kernel/py/stlite-lib"]

[tool.uv]
# Require a uv version that supports relative `exclude-newer` durations
# (introduced in uv 0.9.17).
required-version = ">=0.9.17"
# Dependency cooldown: ignore package releases published within the last week
# to reduce exposure to PyPI supply-chain attacks (compromised versions are
# typically yanked well within this window).
# https://docs.astral.sh/uv/concepts/resolution/#exclude-newer
exclude-newer = "1 week"
